<?xml version="1.0"?>
<package format="2">
  <name>moveit_trajectory_processor</name>
  <version>0.0.0</version>
  <description>The moveit_trajectory_processor package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>moveit_ros_planning</build_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <exec_depend>moveit_ros_planning</exec_depend>

  <build_depend>rclpp</build_depend>
  <build_export_depend>rclpp</build_export_depend>
  <exec_depend>rclpp</exec_depend>

  <build_depend>trajectories_processors_lib</build_depend>
  <build_export_depend>trajectories_processors_lib</build_export_depend>
  <exec_depend>trajectories_processors_lib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
